--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Home +</a>
+              <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
             </li>
             <li class="menu__list-item">
               <a class="menu__list-link" href="#">About</a>
