--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
               <img class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
               <span class="user-nav__num">0</span>
             </a>
+            <div class="user-nav__shop-line"></div>
             <a class="user-nav__link" href="#">
               <img class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
               <span class="user-nav__num">0</span>
