--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="header">
-    <div class="container-lg">
+    <div class="container container-lg">
       <div class="header__inner">
         <a class="logo" href="">
           <img class="logo__img" src="images/logo.png" alt="logo">
@@ -70,7 +70,51 @@
   </header>
 
   <main class="main">
-
+    <div class="top-slider">
+      <div class="container container-lg">
+        <div class="top-slider__inner">
+          <div class="top-slider__item container">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                SMART AND
+                TRENDY
+              </h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link" href="#">Shop Now</a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+          <div class="top-slider__item container">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                SMART AND
+                TRENDY
+              </h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link" href="#">Shop Now</a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+          <div class="top-slider__item container">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                SMART AND
+                TRENDY
+              </h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link" href="#">Shop Now</a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="footer">
