--- a/app/index.html
+++ b/app/index.html
@@ -192,7 +192,7 @@
               </div>
               <div class="product__item mix category-a">
                 <img class="product__item-img" src="images/products/2.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">Wooden chair</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -220,7 +220,7 @@
               </div>
               <div class="product__item mix category-b">
                 <img class="product__item-img" src="images/products/3.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">White chair</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -248,7 +248,7 @@
               </div>
               <div class="product__item mix category-b">
                 <img class="product__item-img" src="images/products/4.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">Retro table</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -304,7 +304,7 @@
               </div>
               <div class="product__item mix category-c">
                 <img class="product__item-img" src="images/products/6.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">Wooden chair</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -332,7 +332,7 @@
               </div>
               <div class="product__item mix category-d">
                 <img class="product__item-img" src="images/products/7.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">Qhite chair</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -360,7 +360,7 @@
               </div>
               <div class="product__item mix category-d">
                 <img class="product__item-img" src="images/products/8.png" alt="">
-                <h6 class="product__item-title">Wooden radio</h6>
+                <h6 class="product__item-title">Retro table</h6>
                 <p class="product__item-price">$29.00</p>
                 <div class="product__item-tools">
                   <button class="product__item-tool">
@@ -389,6 +389,91 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="offer">
+      <div class="container container-lg">
+        <div class="offer__items">
+          <div class="offer__item">
+            <img class="offer__item-img" src="images/offer/1.png" alt="">
+            <h5 class="offer__item-title">Mirum Notare Tellus</h5>
+            <p class="offer__item-text">LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight</p>
+            <button class="offer__item-btn">View More
+              <svg width="22px" height="9px">
+                <path fill-rule="evenodd" fill="rgb(67, 99, 114)"
+                  d="M0.296,5.472 L0.288,5.470 L17.244,5.470 L17.144,8.329 C17.089,8.383 17.060,8.458 17.060,8.534 C17.060,8.611 17.089,8.684 17.144,8.738 L17.316,8.912 C17.370,8.966 17.443,8.996 17.520,8.996 C17.597,8.996 17.669,8.966 17.724,8.912 L21.916,4.700 C21.970,4.646 22.000,4.573 22.000,4.496 C22.000,4.419 21.970,4.346 21.916,4.292 L17.724,0.079 C17.669,0.026 17.597,-0.004 17.520,-0.004 C17.443,-0.004 17.370,0.026 17.316,0.079 L17.144,0.253 C17.089,0.307 17.060,0.379 17.060,0.457 C17.060,0.534 17.089,0.603 17.144,0.656 L17.257,3.521 L0.292,3.521 C0.133,3.521 -0.000,3.658 -0.000,3.817 L-0.000,5.187 C-0.000,5.346 0.137,5.472 0.296,5.472 Z" />
+              </svg>
+            </button>
+          </div>
+          <div class="offer__item">
+            <img class="offer__item-img" src="images/offer/2.png" alt="">
+            <h5 class="offer__item-title">Mirum Notare Tellus</h5>
+            <p class="offer__item-text">50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight</p>
+            <button class="offer__item-btn">View More
+              <svg width="22px" height="9px">
+                <path fill-rule="evenodd" fill="rgb(67, 99, 114)"
+                  d="M0.296,5.472 L0.288,5.470 L17.244,5.470 L17.144,8.329 C17.089,8.383 17.060,8.458 17.060,8.534 C17.060,8.611 17.089,8.684 17.144,8.738 L17.316,8.912 C17.370,8.966 17.443,8.996 17.520,8.996 C17.597,8.996 17.669,8.966 17.724,8.912 L21.916,4.700 C21.970,4.646 22.000,4.573 22.000,4.496 C22.000,4.419 21.970,4.346 21.916,4.292 L17.724,0.079 C17.669,0.026 17.597,-0.004 17.520,-0.004 C17.443,-0.004 17.370,0.026 17.316,0.079 L17.144,0.253 C17.089,0.307 17.060,0.379 17.060,0.457 C17.060,0.534 17.089,0.603 17.144,0.656 L17.257,3.521 L0.292,3.521 C0.133,3.521 -0.000,3.658 -0.000,3.817 L-0.000,5.187 C-0.000,5.346 0.137,5.472 0.296,5.472 Z" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="design">
+      <div class="container">
+        <div class="title">New Design</div>
+        <div class="design__filter-btn">
+          <button class="design__btn" data-filter="all">All</button>
+          <button class="design__btn" data-filter=".category-a">Furnitures</button>
+          <button class="design__btn" data-filter=".category-b">Chairs</button>
+          <button class="design__btn" data-filter=".category-c">Lighting</button>
+          <button class="design__btn" data-filter=".category-d">Decor</button>
+        </div>
+        <div class="design__items">
+          <div class="design__item mix category-a">
+            <img class="design__item-img" src="images/design/1.jpg" alt="">
+            <h6 class="design__item-title">Beat Flat Pendant
+              Black</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+          <div class="design__item mix category-a">
+            <img class="design__item-img" src="images/design/2.jpg" alt="">
+            <h6 class="design__item-title">Lampe Sur Pieds
+              Bamboo</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+          <div class="design__item mix category-b">
+            <img class="design__item-img" src="images/design/3.jpg" alt="">
+            <h6 class="design__item-title">Rattan Rocking
+              Chair</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+          <div class="design__item mix category-b">
+            <img class="design__item-img" src="images/design/4.jpg" alt="">
+            <h6 class="design__item-title">Rattan Rocking
+              Chair</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+          <div class="design__item mix category-c">
+            <img class="design__item-img" src="images/design/5.jpg" alt="">
+            <h6 class="design__item-title">Rattan Rocking
+              Chair</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+          <div class="design__item mix category-d">
+            <img class="design__item-img" src="images/design/6.jpg" alt="">
+            <h6 class="design__item-title">Lampe Sur Pieds
+              Bamboo</h6>
+            <p class="design__item-price">Classic</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="video-play">
+      <div class="video-play__popup">
+        <a class="video-play__link" data-fancybox href="https://www.youtube.com/watch?v=MPFTY-b4WYE">
+          <img src="images/icons/video-play.svg" alt="video play button">
+        </a>
       </div>
     </section>
   </main>
