added login page

--- a/app/login.html
+++ b/app/login.html
@@ -87,6 +87,32 @@
         </ul>
       </div>
     </section>
+    <section class="modal">
+      <div class="container">
+        <form class="modal__form" action="#">
+          <label class="modal__label">
+            Username or email address*
+            <input class="modal__input" type="text" required>
+          </label>
+          <label class="modal__label">
+            Password*
+            <input class="modal__input" type="password" required>
+          </label>
+          <button class="modal__btn" type="submit">Login</button>
+          <div class="modal__form-bottom">
+            <label class="modal__label-chekbox">
+              <input type="checkbox">
+              Remember me
+            </label>
+            <a class="modal__error" href="#">Lost your password?</a>
+          </div>
+        </form>
+        <div class="modal__links">
+          <a class="modal__link" href="#">Not registered? No problem</a>
+          <a class="modal__link-btn" href="#">Create an account</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
