--- a/app/index.html
+++ b/app/index.html
@@ -482,7 +482,7 @@
             <h2 class="title article__title">Our Insights & Articles</h2>
             <a class="article__link" href="#">
               View All
-              <svg  width="7px"  height="12px">
+              <svg width="7px" height="12px">
                 <path fill-rule="evenodd" fill="rgb(38, 38, 38)"
                   d="M1.333,11.687 C1.184,11.687 1.034,11.626 0.922,11.504 C0.819,11.390 0.767,11.245 0.767,11.100 C0.767,10.943 0.826,10.789 0.944,10.673 L5.491,6.198 L0.944,1.724 C0.826,1.609 0.767,1.453 0.767,1.297 C0.767,1.152 0.819,1.007 0.922,0.893 C1.138,0.657 1.496,0.647 1.723,0.870 L6.700,5.768 C6.705,5.772 6.709,5.777 6.714,5.782 C6.762,5.831 6.801,5.889 6.827,5.951 L6.827,5.951 C6.828,5.951 6.828,5.951 6.828,5.951 C6.862,6.029 6.880,6.112 6.880,6.195 C6.880,6.196 6.880,6.197 6.880,6.198 C6.880,6.284 6.862,6.369 6.827,6.447 L6.827,6.447 C6.827,6.448 6.826,6.448 6.826,6.448 C6.826,6.449 6.826,6.449 6.826,6.449 C6.826,6.449 6.826,6.449 6.826,6.450 C6.799,6.509 6.762,6.565 6.715,6.614 C6.710,6.619 6.705,6.623 6.700,6.628 L1.723,11.527 C1.614,11.635 1.473,11.687 1.333,11.687 Z" />
               </svg>
@@ -492,10 +492,14 @@
             <div class="article-item">
               <img class="article-item__img" src="images/article/1.jpg" alt="article icon">
               <div class="article-item__bottom">
-                <p class="article-item__news">NEWS</p>
-                <p class="article-item__text">
-                  Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                </p>
+                <a href="#">
+                  <p class="article-item__news">NEWS</p>
+                </a>
+                <a href="#">
+                  <p class="article-item__text">
+                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                </a>
                 <div class="article-item__info">
                   <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
                   <p class="article-item__data">28 JANUARY, 2020</p>
@@ -507,10 +511,14 @@
             <div class="article-item">
               <img class="article-item__img" src="images/article/2.jpg" alt="article icon">
               <div class="article-item__bottom">
-                <p class="article-item__news">NEWS</p>
-                <p class="article-item__text">
-                  Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                </p>
+                <a href="#">
+                  <p class="article-item__news">NEWS</p>
+                </a>
+                <a href="#">
+                  <p class="article-item__text">
+                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                </a>
                 <div class="article-item__info">
                   <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
                   <p class="article-item__data">28 JANUARY, 2020</p>
@@ -522,10 +530,14 @@
             <div class="article-item">
               <img class="article-item__img" src="images/article/3.jpg" alt="article icon">
               <div class="article-item__bottom">
-                <p class="article-item__news">NEWS</p>
-                <p class="article-item__text">
-                  Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                </p>
+                <a href="#">
+                  <p class="article-item__news">NEWS</p>
+                </a>
+                <a href="#">
+                  <p class="article-item__text">
+                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  </p>
+                </a>
                 <div class="article-item__info">
                   <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
                   <p class="article-item__data">28 JANUARY, 2020</p>
@@ -536,25 +548,22 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="partners">
-        <div class="container">
-          <ul class="partners__list">
-            <li class="partners__list-item"><img src="images/partners/1.png" alt="partners logo"></li>
-            <li class="partners__list-item"><img src="images/partners/2.png" alt="partners logo"></li>
-            <li class="partners__list-item"><img src="images/partners/3.png" alt="partners logo"></li>
-            <li class="partners__list-item"><img src="images/partners/4.png" alt="partners logo"></li>
-            <li class="partners__list-item"><img src="images/partners/5.png" alt="partners logo"></li>
-          </ul>
-        </div>
-      </div>
+      </div> 
     </section>
-
-    
-
   </main>
 
   <footer class="footer">
+    <div class="partners">
+      <div class="container">
+        <ul class="partners__list">
+          <li class="partners__list-item"><img src="images/partners/1.png" alt="partners logo"></li>
+          <li class="partners__list-item"><img src="images/partners/2.png" alt="partners logo"></li>
+          <li class="partners__list-item"><img src="images/partners/3.png" alt="partners logo"></li>
+          <li class="partners__list-item"><img src="images/partners/4.png" alt="partners logo"></li>
+          <li class="partners__list-item"><img src="images/partners/5.png" alt="partners logo"></li>
+        </ul>
+      </div>
+    </div>
     <div class="container">
       <div class="footer-top">
         <div class="footer-top__item footer-top__contact">
@@ -642,7 +651,6 @@
       </div>
     </div>
   </footer>
-
 
   <script src="js/main.min.js"></script>
 </body>
