--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,9 @@
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <nav class="menu">
+          <button class="menu__btn">
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
@@ -69,7 +72,7 @@
   </header>
 
   <main class="main">
-    <section class="top-slider">
+    <!-- <section class="top-slider">
       <div class="container container-lg">
         <div class="top-slider__inner">
           <div class="top-slider__item container">
@@ -549,11 +552,8 @@
           </div>
         </div>
       </div> 
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="partners">
+    </section> -->
+    <!-- <div class="partners">
       <div class="container">
         <ul class="partners__list">
           <li class="partners__list-item"><img src="images/partners/1.png" alt="partners logo"></li>
@@ -563,7 +563,11 @@
           <li class="partners__list-item"><img src="images/partners/5.png" alt="partners logo"></li>
         </ul>
       </div>
-    </div>
+    </div> -->
+  </main>
+
+  <footer class="footer">
+
     <div class="container">
       <div class="footer-top">
         <div class="footer-top__item footer-top__contact">
