--- a/app/products.html
+++ b/app/products.html
@@ -5,18 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Glee | Главная</title>
+  <link rel="stylesheet" href="css/products.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="header">
-    <div class="container-lg container">
+    <header class="header">
+    <div class="container container-lg">
       <div class="header__inner">
         <a class="logo" href="">
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <nav class="menu">
+          <button class="menu__btn">
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
@@ -51,7 +55,6 @@
               <img class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
               <span class="user-nav__num">0</span>
             </a>
-            <div class="user-nav__shop-line"></div>
             <a class="user-nav__link" href="#">
               <img class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
               <span class="user-nav__num">0</span>
@@ -91,6 +94,13 @@
     <section class="products">
       <div class="container">
         <div class="products__inner">
+        <button class="products__filter-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30pt" height="30pt" viewBox="0 0 30 30" version="1.1">
+          <g id="surface1">
+          <path style=" stroke:none;fill-rule:nonzero;fill:#fff;fill-opacity:1;" d="M 28.59375 0 L 1.40625 0 C 0.160156 0 -0.472656 1.515625 0.414062 2.402344 L 11.25 13.238281 L 11.25 25.3125 C 11.25 25.769531 11.472656 26.203125 11.851562 26.464844 L 16.539062 29.746094 C 17.460938 30.390625 18.75 29.734375 18.75 28.59375 L 18.75 13.238281 L 29.585938 2.402344 C 30.46875 1.515625 29.84375 0 28.59375 0 Z M 28.59375 0 "/>
+          </g>
+          </svg>
+        </button>
           <div class="products__filter filter">
 
             <div class="filter__item filter-category">
@@ -775,10 +785,7 @@
         </div>
       </div>
     </section>
-  </main>
-
-  <footer class="footer">
-    <div class="partners">
+        <div class="partners">
       <div class="container">
         <ul class="partners__list">
           <li class="partners__list-item"><img src="images/partners/1.png" alt="partners logo"></li>
@@ -789,93 +796,97 @@
         </ul>
       </div>
     </div>
-    <div class="container">
-      <div class="footer-top">
-        <div class="footer-top__item footer-top__contact">
-          <a class="logo footer-top__logo" href="">
-            <img class="logo__img" src="images/logo.png" alt="logo">
-          </a>
-          <a class="footer-top__address" href="#">
-            ADDRESS: 4772 Wines Lane
-            Houston, TX 77032
-          </a>
-          <a class="footer-top__phone" href="tel:+8323475843">
-            Telephone: +832-347-5843
-          </a>
-          <a class="footer-top__email" href="mailto:contact@Glee.com">
-            Email: contact@Glee.com
-          </a>
-        </div>
-        <div class="footer-top__item footer-top__nav">
-          <h6 class="footer-top__title">Services</h6>
-          <ul class="footer-top__list">
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">About us</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Return Policy</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Our Blog</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Contact Us</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Terms & Condition</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-top__item footer-top__nav">
-          <h6 class="footer-top__title">Account</h6>
-          <ul class="footer-top__list">
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Your Account</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Checkout</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Login</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Register</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-top__item footer-top__item-form">
-          <h6 class="footer-top__title">Newsletter</h6>
-          <p class="footer-top__text">
-            Subscribe by our newsletter and get
-            update protidin.
-          </p>
-          <form class="footer-top__form" action="#">
-            <input class="footer-top__form-input" type="email" placeholder="Email address" required>
-            <button class="footer-top__form-btn" type="submit">Subscribe</button>
-          </form>
-        </div>
+  </main>
+
+ <footer class="footer">
+
+  <div class="container">
+    <div class="footer-top">
+      <div class="footer-top__item footer-top__contact">
+        <a class="logo footer-top__logo" href="">
+          <img class="logo__img" src="images/logo.png" alt="logo">
+        </a>
+        <a class="footer-top__address" href="#">
+          ADDRESS: 4772 Wines Lane
+          Houston, TX 77032
+        </a>
+        <a class="footer-top__phone" href="tel:+8323475843">
+          Telephone: +832-347-5843
+        </a>
+        <a class="footer-top__email" href="mailto:contact@Glee.com">
+          Email: contact@Glee.com
+        </a>
       </div>
-      <div class="footer-bottom">
-        <p class="footer-bottom__copy">
-          ©2020 CopyRight Example. All rights reserved.
-        </p>
-        <ul class="footer-bottom__list">
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Home</a>
+      <div class="footer-top__item footer-top__nav">
+        <h6 class="footer-top__title">Services</h6>
+        <ul class="footer-top__list">
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">About us</a>
           </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">About</a>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Return Policy</a>
           </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Blog</a>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Our Blog</a>
           </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Contact</a>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Contact Us</a>
+          </li>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Terms & Condition</a>
           </li>
         </ul>
       </div>
+      <div class="footer-top__item footer-top__nav">
+        <h6 class="footer-top__title">Account</h6>
+        <ul class="footer-top__list">
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Your Account</a>
+          </li>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Checkout</a>
+          </li>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Login</a>
+          </li>
+          <li class="footer-top__item">
+            <a class="footer-top__link" href="#">Register</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-top__item footer-top__item-form">
+        <h6 class="footer-top__title">Newsletter</h6>
+        <p class="footer-top__text">
+          Subscribe by our newsletter and get
+          update protidin.
+        </p>
+        <form class="footer-top__form" action="#">
+          <input class="footer-top__form-input" type="email" placeholder="Email address" required>
+          <button class="footer-top__form-btn" type="submit">Subscribe</button>
+        </form>
+      </div>
     </div>
-  </footer>
+    <div class="footer-bottom">
+      <p class="footer-bottom__copy">
+        ©2020 CopyRight Example. All rights reserved.
+      </p>
+      <ul class="footer-bottom__list">
+        <li class="footer-bottom__item">
+          <a class="footer-bottom__link" href="#">Home</a>
+        </li>
+        <li class="footer-bottom__item">
+          <a class="footer-bottom__link" href="#">About</a>
+        </li>
+        <li class="footer-bottom__item">
+          <a class="footer-bottom__link" href="#">Blog</a>
+        </li>
+        <li class="footer-bottom__item">
+          <a class="footer-bottom__link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
 
   <script src="js/main.min.js"></script>
